docs-archive/apache-airflow-providers-apache-spark/5.6.0/_sources/_api/airflow/providers/apache/spark/hooks/spark_pipelines/index.rst.txt
airflow.providers.apache.spark.hooks.spark_pipelines
====================================================

.. py:module:: airflow.providers.apache.spark.hooks.spark_pipelines


Exceptions
----------

.. autoapisummary::

   airflow.providers.apache.spark.hooks.spark_pipelines.SparkPipelinesException


Classes
-------

.. autoapisummary::

   airflow.providers.apache.spark.hooks.spark_pipelines.SparkPipelinesHook


Module Contents
---------------

.. py:exception:: SparkPipelinesException

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   Exception raised when spark-pipelines command fails.


.. py:class:: SparkPipelinesHook(pipeline_spec = None, pipeline_command = 'run', **kwargs)

   Bases: :py:obj:`airflow.providers.apache.spark.hooks.spark_submit.SparkSubmitHook`


   Hook for interacting with Spark Declarative Pipelines via the spark-pipelines CLI.

   Extends SparkSubmitHook to leverage existing connection management while providing
   pipeline-specific functionality.

   :param pipeline_spec: Path to the pipeline specification file (YAML)
   :param pipeline_command: The spark-pipelines command to run ('run', 'dry-run')


   .. py:attribute:: pipeline_spec
      :value: None



   .. py:attribute:: pipeline_command
      :value: 'run'



   .. py:method:: submit_pipeline(**kwargs)

      Execute the spark-pipelines command.

      :param kwargs: extra arguments to Popen (see subprocess.Popen)



   .. py:method:: submit(application = '', **kwargs)

      Override submit to use pipeline-specific logic.



